/*
 * This Analysis Normal Form (ANF) Statement is used to succinctly represent a medical statement in its most pertinent and simplified form.
 */
syntax = "proto3";
package cdx.opencdx.grpc.anf;
import "google/protobuf/timestamp.proto";

/*
 * Enum to encapsulate the possible Media statuses.
 */
enum Status {
  /*
   * Unspecified or unknown media status.
   */
  STATUS_UNSPECIFIED = 0;

  /*
   * Media status is active.
   */
  STATUS_ACTIVE = 1;

  /*
   * Media status designates that the media is being deleted.
   */
  STATUS_DELETED = 2;
}

enum CircumstanceType {
  
  PERFORMANCE_CIRCUMSTANCE = 0;

  REQUEST_CIRCUMSTANCE = 1;

  NARRATIVE_CIRCUMSTANCE = 2;
}

/*
 * Service interface for operations related to ANF Statement instances.
 * It provides create, retrieve, update, and delete (CRUD) operations for instances of ANFStatement.
 */
service ANFService {
  /*
   * Creates a new ANF Statement instance and returns its identifier.
   */
  rpc CreateANFStatement (ANFStatement) returns (Identifier);

  /*
   * Retrieves an existing ANF Statement using its identifier.
   */
  rpc GetANFStatement (Identifier) returns (ANFStatement);

  /*
   * Updates an existing ANF Statement instance and returns its identifier.
   */
  rpc UpdateANFStatement (ANFStatement) returns (Identifier);

  /*
   * Deletes an ANF Statement instance using its identifier and >returns the identifier of the deleted item.
   */
  rpc DeleteANFStatement (Identifier) returns (Identifier);
}

/*
 * 'Identifier' Message definition for a unique ID associated with an ANFStatement
 */
message Identifier {
  /*
   * The variable 'id' stands for the unique Identifier for an ANFStatement.
   */
  string id = 1;
}

/*
 * The `Measure` message encapsulates a quantifiable attribute such as time duration or test results.
 * It defines an upper and lower bound for the measure, clarification if these bounds are inclusive,
 * the semantic interpretation of the measure, and optionally, the resolution or accuracy of the measure.
 *
 * Following are some examples of measures for clarification:
 * "Presence" denotes a measure where a certain quantity is existent. The `upper_bound` is set to INF, `lower_bound` is greater than 0 with `include_lower_bound` set based on context.
 * "Absence" denotes a measure where a certain quantity is non-existent. Both `upper_bound` and `lower_bound` are set to 0 with `include_lower_bound` and `include_upper_bound` set to true.
 * "Indeterminate" indicates a measure that can range from 0 to some value greater than 0.
 * "Exact Value" signifies a measure where a certain quantity is a precise value. Both `upper_bound` and `lower_bound` are set to this exact value with `include_lower_bound` and `include_upper_bound` set to true.
 * "Ranges" represent a measure that falls within a particular range. The `upper_bound` and `lower_bound` are set to the extremities of this range with `include_lower_bound` and `include_upper_bound` set based on context.
 * `semantic` describes the semantical sense of the measure, e.g., "Countable quantity".
 */
message Measure {
  /*
   * The `upper_bound` field signifies the maximum limit of the measure.
   */
  string upper_bound = 1;

  /*
   * The `lower_bound` field signifies the minimum limit of the measure.
   */
  string lower_bound = 2;

  /*
   * The `include_upper_bound` field reveals if the `upper_bound` value is inclusive in the measure.
   */
  bool include_upper_bound = 3;

  /*
   * The `include_lower_bound` field reveals if the `lower_bound` value is inclusive in the measure.
   */
  bool include_lower_bound = 4;

  string semantic = 5;

  /*
   * `resolution` denotes the accuracy or precision of the measure, it is an optional field.
   */
  string resolution = 6;
}

/*
 * Message representing a participant, who is typically a patient.
 */
message Participant {
  /*
   * Unique identifier for the participant
   */
  string id = 1;

  string practitioner_value = 2;

  string code = 3;
}

/*
 * Message representing a practitioner or an entity that authors.
 */
message Practitioner {
  /*
   * Unique identifier for the practitioner
   */
  optional string id = 1;

  /*
   * Reference to the participating practitioner
   */
  string practitioner_value = 2;

  /*
   * Authorized roles of the practitioner
   */
  string code = 3;
}

/*
 * Message representing associated statements like preconditions or interpretations.
 */
message AssociatedStatement {
  string id = 1;
  /*
   * Contents or description of the associated statement
   */
  string semantic = 2;
}

/*
 * Message representing a reference to other entities like patient records or health practitioners.
 */
message Reference {
  /*
   * Unique identifier for the reference
   */
  string id = 1;
  /*
   * The type of the reference, for example, "Patient", "Practitioner"
   */
  string type = 2;
}

message CircumstanceChoice {
  
  CircumstanceType circumstance_type = 1;

  string status = 2;

  Measure result = 3;

  string health_risk = 4;

  Measure normal_range = 5;

  Participant circumstance = 6;

  Measure timing = 7;

  Participant participant = 8;

}

/*
 * The ANFStatement message is the main representation of an ANFStatement. It defines the necessary fields required to represent it.
 */
message ANFStatement {
  /*
   * Uniquely identifies the ANFStatement.
   */
  Identifier id = 1;
  /*
   * Denotes the timestamp of the statement, adhering to the rule: Timing - past, present, or future.
   * For the "Performance of Action", Timing could denote a past or current timestamp.
   * For the "Request of Action", Timing would always denote a future timestamp.
   */
  Measure time = 2;
  /*
   * Identifies the subject of the record, which is typically the patient.
   */
  Participant subject_of_record = 3;
  /*
   * Identifies all authors behind this statement.
   */
  repeated Practitioner authors = 4;
  /*
   * Refers to the subject or topic of the incorporated information.
   */
  string subject_of_information = 5;
  /*
   * Refers to any related statements or conditions.
   */
  repeated AssociatedStatement associated_statement = 6;
  /*
   * Denotes the topic of the statement, and includes rules for different types of observations, procedures and test:
   * - Simple observation statements use the "Observation" procedure to symbolize the topic.
   * - Medication administration statements use the "Administration of substance" concept.
   * - Laboratory test statements use the "Laboratory Procedure" concept.
   * - Imaging Procedure statements use the "Imaging Procedure" concept.
   */
  string topic = 7;
  /*
   * Specifies the type category of the statement such as "Request", "Performance", etc.
   */
  string type = 8;
  /*
   * Circumstance choice
   */
  CircumstanceChoice circumstance_choice = 9;
  /*
   * Timestamp when this ANFStatement was created.
   */
  optional google.protobuf.Timestamp created = 10;
  /*
   * Timestamp when modifications were done to this ANFStatement.
   */
  optional google.protobuf.Timestamp modified = 12;
  /*
   * Specifies the unique identifier of the creator of this ANFStatement.
   */
  optional string creator = 13;
  /*
   * Specifies the unique identifier of the modifier of this ANFStatement.
   */
  optional string modifier = 14;
  /*
   * Specifies the current status of the ANFStatement.
   */
  Status status = 15;
}
